<resources>
    <string name="app_name">Market Place</string>
    <string name="title_login">LOGIN</string>
    <string name="title_register">REGISTER</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_forgot_password">Enter your username and e-mail address and we will send you an e-mail to reset
        your
        password!
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="button_login">Sign In</string>
    <string name="button_register">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="account">Already have an account?</string>
    <string name="register">REGISTER NOW!</string>
    <string name="login">LOGIN NOW!</string>
    <string name="username_empty">Please enter your username!</string>
    <string name="email_empty">Please enter your email ID!</string>
    <string name="email_wrong">Incorrect email ID!</string>
    <string name="email_sent_success">Email was sent successfully!</string>
    <string name="password_empty">Please enter your password!</string>
    <string name="password_wrong">Incorrect password!</string>
    <string name="confirm_password_empty">Please enter your confirm password!</string>
    <string name="confirm_password_mismatch">Password and confirm password does not match!</string>

    <string name="please_wait">Please Wait</string>
    <string name="register_success">You are registered successfully!</string>

    <string name="title_profile">PROFILE</string>
    <string name="et_hint_mobile_number">MOBILE NUMBER</string>
    <string name="btn_save">SAVE</string>
    <string name="hintbtnSave">SAVE</string>
    <string name="read_storage_permission_denied">Permission is denied!</string>
    <string name="image_selection_failed">Image Selection Failed!</string>
    <string name="mobile_number_empty">Please enter your mobile number!</string>
    <string name="profile_updated_success">Your profile was updated successfully!</string>
    <string name="image_uploaded_success">Your image was uploaded successfully!</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_market">My Market</string>
    <string name="title_fares">My Fares</string>
    <string name="click_back_again">Please click back again to exit!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintbtnLogout">Log Out</string>
    <string name="order_now">Order Now</string>
    <string name="profile_text">Profile</string>
    <string name="timeline">Timeline</string>
    <string name="my_market">My Market</string>
    <string name="my_fares">My Fares</string>
    <string name="search">Search</string>
    <string name="content_description_search">Content Description Search</string>
    <string name="profile">Filter</string>
    <string name="content_description_profile">Content description filter</string>
    <string name="submit">Submit</string>
    <string name="model_username">Cameron Williamson</string>
    <string name="model_price">30 RON/l</string>
    <string name="model_product_name">P{alinka}de prune</string>
    <string name="model_active_status">Active</string>
    <string name="model_date">30.9.2021</string>
    <string name="model_description">Palinka din prune alese, facuta cu drag dupa o reteta de familie. S-au folosit cele
        mai bune si frumoase prune, culese din livezi din Transilvania
    </string>
    <string name="total_items">Total items</string>
    <string name="price_item">Price item</string>
    <string name="sold_items">Sold items</string>
    <string name="review">Review</string>
    <string name="total_item">3 L</string>
    <string name="total_price_item">50 RON</string>
    <string name="total_sold_items">30 L</string>
    <string name="total_review">900 RON</string>
    <string name="rating">Rating</string>
    <string name="total_rating">5</string>
    <string name="ongoing_sales">Ongoing sales</string>
    <string name="ongoing_orders">Ongoing orders</string>
    <string name="model_amount">Amount: 3L</string>
    <string name="model_price_fares">Price: 90 Ron</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
</resources>