<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <ImageView
            android:id="@+id/product_placeholder_image_view"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_marginTop="45dp"
            android:scaleType="fitXY"
            android:src="@drawable/palinka"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/owner_image_view"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_placeholder_image_view"
            android:background="@drawable/avatar" />

    <TextView
            android:id="@+id/owner_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/model_username"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/owner_image_view"
            app:layout_constraintTop_toBottomOf="@id/product_placeholder_image_view" android:layout_marginStart="8dp"/>


    <TextView
            android:id="@+id/product_name_text_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/model_product_name"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/owner_name_text_view" />



<!--    <TextView-->
<!--            android:id="@+id/price_text_view"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="30dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:text="@string/model_price"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="24sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/product_name_text_view" />-->

    <ImageView
            android:id="@+id/active_inactive_image_view"
            android:layout_width="14dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_active_product"
            app:layout_constraintEnd_toStartOf="@id/active_inactive_text_view"
            app:layout_constraintTop_toBottomOf="@id/product_name_text_view"/>


    <TextView
            android:id="@+id/active_inactive_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:text="Active"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_name_text_view"/>
    <TextView
            android:id="@+id/product_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/model_description"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/product_name_text_view" />

    <!--    <TextView-->
<!--            android:id="@+id/sold_items_circle_text_view"-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginStart="35dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:background="@drawable/details_background"-->
<!--            android:gravity="center"-->
<!--            android:padding="10dp"-->
<!--            android:text="@string/total_sold_items"-->
<!--            android:textColor="@color/purple_500"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintStart_toEndOf="@id/price_item_circle_text_view"-->
<!--            app:layout_constraintTop_toBottomOf="@id/product_description_text_view" />-->

    <TextView
            android:id="@+id/total_items_circle_text_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/details_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/total_item"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_description_text_view"/>

    <TextView
            android:id="@+id/price_item_circle_text_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/details_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/total_price_item"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/total_items_circle_text_view"

            app:layout_constraintTop_toBottomOf="@id/product_description_text_view"/>

    <!--    <TextView-->
<!--            android:id="@+id/sold_items_text_view"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="30dp"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:text="@string/sold_items"-->
<!--            app:layout_constraintTop_toBottomOf="@id/total_items_circle_text_view"-->
<!--            app:layout_constraintStart_toEndOf="@id/price_item_text_view"/>-->

    <TextView
            android:id="@+id/rating_circle_text_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/details_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/total_rating"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/price_item_text_view"
            app:layout_constraintTop_toBottomOf="@id/product_description_text_view"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.462"/>
    <TextView
            android:id="@+id/total_items_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:text="@string/total_items"
            app:layout_constraintTop_toBottomOf="@id/total_items_circle_text_view"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/price_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:text="@string/price_item"
            app:layout_constraintTop_toBottomOf="@id/total_items_circle_text_view"
            app:layout_constraintStart_toEndOf="@id/total_items_text_view"/>
    <TextView
            android:id="@+id/rating_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:text="@string/rating"
            app:layout_constraintTop_toBottomOf="@id/total_items_circle_text_view"
            app:layout_constraintStart_toEndOf="@id/price_item_text_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>