<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_margin="10dp"
                                   app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/product_image_view"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/palinka" />

        <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/model_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_image_view" />

        <ImageView
                android:id="@+id/owner_image_view"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@id/product_image_view"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/avatar" />

        <TextView
                android:id="@+id/owner_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/model_username"
                android:textSize="@dimen/tv_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/owner_image_view"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/product_name_text_view"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/model_product_name"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/product_image_view"
                app:layout_constraintTop_toBottomOf="@id/owner_name_text_view" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/order_now_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="-40dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/order_now"
                android:textAllCaps="false"
                android:textSize="@dimen/button_text_size"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_my_market"
                app:iconSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/product_image_view"
                app:layout_constraintTop_toBottomOf="@id/product_name_text_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>