<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/owner_image_view"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/avatar" />

        <TextView
            android:id="@+id/owner_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/model_username"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/owner_image_view"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/owner_image_view"
            tools:src="@drawable/palinka" />

        <TextView
            android:id="@+id/order_type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="Incoming order"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/product_image_view"
            app:layout_constraintTop_toBottomOf="@id/owner_image_view" />

        <TextView
            android:id="@+id/product_name_text_view"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/model_product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/product_image_view"
            app:layout_constraintTop_toBottomOf="@id/order_type_text_view" />

        <TextView
            android:id="@+id/amount_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/model_amount"
            app:layout_constraintTop_toBottomOf="@id/product_name_text_view"
            app:layout_constraintStart_toEndOf="@id/product_image_view"/>

        <View
            android:id="@+id/separator_view"
            android:layout_width="2dp"
            android:layout_height="18dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:background="@color/black"
            app:layout_constraintStart_toEndOf="@id/amount_text_view"
            app:layout_constraintTop_toBottomOf="@id/product_name_text_view"/>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/model_price_fares"
            app:layout_constraintTop_toBottomOf="@id/product_name_text_view"
            app:layout_constraintStart_toEndOf="@id/separator_view"/>

        <ImageView
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_accept_button"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/decline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_decline_button"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/accept_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>